--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div id="open-modal2" class="modal-window hidden2">
         <div class="index3_box">
             <button class="close-modal" onclick="closer2()">&times;</button>
-            <p class="mask_title">Add New Iteam</p>
-            <input type="text" class="input_iteam" placeholder="Add New Iteam" style="text-align:center;font-size:1.2rem;color:orangered">
+            <p class="mask_title">Add New Item</p>
+            <input type="text" class="input_iteam" placeholder="Add New Item" style="text-align:center;font-size:1.2rem;color:orangered">
            <input type="button" value="ADD" class="add_button2">
         </div>
     </div>
